Complete CancelLeaveRequest business logic Implement Approve, Reject Leave Request in the UI
