# HR.LeaveManagement.BlazorUI/Services/Base/swagger.json
@@ -106,6 +106,16 @@
         "tags": [
           "LeaveAllocations"
         ],
+        "parameters": [
+          {
+            "name": "isLoggedInUser",
+            "in": "query",
+            "schema": {
+              "type": "boolean",
+              "default": false
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
